<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/slogan"
        android:gravity="bottom"
        android:padding="20dp"
        android:text="@string/department_of_software_engineering"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonswe"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/powder_blue"
        android:text="@string/about_swe"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonfaculty"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/light_sky_blue"
        android:text="@string/faculty_member" />

    <Button
        android:id="@+id/buttonfacilities"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/azure"
        android:text="@string/facilities"
        />


    <Button
        android:id="@+id/buttondiu"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/dodger_blue"
        android:text="@string/about_diu" />

    <Button
        android:id="@+id/buttonadmission"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/admission_info"
        android:background="@color/cornflower_blue"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>